# search-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build-deploy.yaml  lint-test.yaml
search-index/: Cargo.toml
search-index/src/: index.rs  lib.rs  schema.rs  tokenizer.rs
search-rest/: Cargo.toml
search-rest/src/: authentication.rs  client.rs  error.rs  extract.rs  main.rs  model.rs  utils.rs
search-rest/src/health/: handler.rs  mod.rs  routes.rs
search-rest/src/search/: handler.rs  mod.rs  routes.rs
search-rest/src/service/: auth.rs  health.rs  mod.rs  search.rs
search-rest/src/token/: handler.rs  mod.rs  routes.rs
search-state/: Cargo.toml
search-state/src/: lib.rs
