[package]
name = "search-index"
version = "0.2.0-alpha.4"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarkov-database-rs = { workspace = true }

tantivy = "0.19"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
