[package]
name = "search-index"
version = "0.3.0-alpha.0"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarkov-database-rs = { workspace = true }

tantivy = "0.19"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
