[package]
name = "search-rest"
version = "0.2.0-alpha.3"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jemalloc"]

jemalloc = ["jemallocator"]

[dependencies]
search-index = { path = "../search-index" }
search-state = { path = "../search-state" }

tarkov-database-rs = { git = "https://github.com/tarkov-database/tarkov-database-rs.git", tag = "v0.2.0-alpha.6" }

jemallocator = { version = "0.3", optional = true }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["http1", "server", "runtime"] }
tower = { version = "0.4", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.2.5", features = [
    "add-extension",
    "trace",
    "sensitive-headers",
] }
axum = { version = "0.4", features = ["headers"] }
headers = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
humantime-serde = "1"
jsonwebtoken = "8"
envy = "0.4"
dotenv = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
