[package]
name = "search-rest"
version = "0.3.0-alpha.2"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jemalloc"]

jemalloc = ["jemallocator"]

[dependencies]
search-index = { path = "../search-index" }
search-state = { path = "../search-state" }

tarkov-database-rs = { workspace = true }

jemallocator = { version = "0.5", optional = true }
tokio = { workspace = true, features = ["full"] }
hyper = { version = "0.14", features = ["http1", "http2", "server", "runtime"] }
hyper-rustls = { git = "https://github.com/morphy2k/hyper-rustls.git", tag = "v0.1.0-beta.1" }
tower = { version = "0.4", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.4", features = [
    "add-extension",
    "trace",
    "sensitive-headers",
] }
axum = { version = "0.6.19", default-features = false, features = [
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
    "tower-log",
    "headers",
] }
headers = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
chrono = "0.4"
humantime-serde = "1"
jsonwebtoken = "8"
envy = "0.4"
dotenv = "0.15"
thiserror = { workspace = true }
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
