[package]
name = "search-state"
version = "0.1.0-alpha.2"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openssl = ["tarkov-database-rs/openssl"]
rustls = ["tarkov-database-rs/rustls"]

[dependencies]
search-index = { path = "../search-index" }
tarkov-database-rs = { git = "https://github.com/tarkov-database/tarkov-database-rs.git", tag = "v0.1.0-alpha.8" }
actix = "0.10"
tokio = "0.2"
chrono = "0.4"
log = "0.4"
