[package]
name = "search-state"
version = "0.3.0-alpha.2"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
search-index = { path = "../search-index" }

tarkov-database-rs = { git = "https://github.com/tarkov-database/tarkov-database-rs.git", tag = "v0.2.0-alpha.6" }

tokio = { version = "1", features = [
    "sync",
    "macros",
    "time",
], default-features = false }
chrono = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
