[package]
name = "search-state"
version = "0.4.0-alpha.0"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
search-index = { path = "../search-index" }

tarkov-database-rs = { workspace = true }

tokio = { workspace = true, features = ["sync", "macros", "time"] }
chrono = "0.4"
thiserror = { workspace = true }
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
